--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "license": "ISC",
     "dependencies": {
         "ejs": "^3.1.8",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mongoose": "^6.9.2",
+        "slugify": "^1.6.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
